--- a/enkuhliapplikatosnra/Views/Home/Index.cshtml
+++ b/enkuhliapplikatosnra/Views/Home/Index.cshtml
@@ -1,12 +1,17 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<meta name="google-signin-client_id" content="32369277967-b5aijgj59qmcg6f9o73eeh2e7s73bfik.apps.googleusercontent.com">
+<script src="https://apis.google.com/js/platform.js" async defer></script>
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
+
+<div class="g-signin2" data-onsuccess="onSignIn"></div>
+
 
 <div class="row">
     <div class="col-md-4">
