--- a/enkuhliapplikatosnra/Views/Home/Index.cshtml
+++ b/enkuhliapplikatosnra/Views/Home/Index.cshtml
@@ -2,7 +2,26 @@
     ViewBag.Title = "Home Page";
 }
 <meta name="google-signin-client_id" content="32369277967-b5aijgj59qmcg6f9o73eeh2e7s73bfik.apps.googleusercontent.com">
-<script src="https://apis.google.com/js/platform.js" async defer></script>
+<script src="https://apis.google.com/js/platform.js" async defer>  
+</script>
+
+<script>
+    function onSignIn(googleUser) {
+        var profile = googleUser.getBasicProfile();
+        console.log('ID: ' + profile.getId()); // Do not send to your backend! Use an ID token instead.
+        console.log('Name: ' + profile.getName());
+        console.log('Image URL: ' + profile.getImageUrl());
+        console.log('Email: ' + profile.getEmail()); // This is null if the 'email' scope is not present.
+    }
+
+    function signOut() {
+        var auth2 = gapi.auth2.getAuthInstance();
+        auth2.signOut().then(function () {
+            console.log('User signed out.');
+        });
+    }
+
+</script>
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
@@ -11,6 +30,7 @@
 </div>
 
 <div class="g-signin2" data-onsuccess="onSignIn"></div>
+<a href="#" onclick="signOut();">Sign out</a>
 
 
 <div class="row">
